cfunctions-0.27/tests/bad-enum-1.c
// error: `;' in enum list.

enum fub { @ jub; } juble;
